# RosLibsurvive

./: README.md
ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ws/devel/lib/camerasterio/: camerasterio
ws/devel/lib/pkgconfig/: camerasterio.pc
ws/devel/share/camerasterio/cmake/: camerasterioConfig.cmake
ws/src/libsurviveInterface/: CMakeLists.txt  main.cpp
